add isvip
